plugins {
  id "com.github.spotbugs" version "2.0.0"
  id "com.github.ben-manes.versions" version "0.20.0"
}

def getVersion = {->
  def versionFile = new File('.version')
  try {
    def command = 'git describe --tags --abbrev=7 --dirty'
    def proc = command.execute()
    proc.waitFor()

    versionFile.createNewFile()
    versionFile.text = proc.text.trim()

    return proc.text.trim()
  } catch (java.io.IOException e) {
    if (versionFile.exists()) {
      return versionFile.text.trim()
    } else {
      return "UNKNOWN"
    }
  }
}

allprojects {
  version = getVersion()

  repositories {
    maven {
      url = uri("https://plugins.gradle.org/m2/")
    }
    mavenCentral()
  }
}

spotbugs {
  toolVersion = "3.1.12"
}

subprojects {subproject ->

  tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
  }

  tasks.withType(Test) {
    testLogging {
      events "started", "passed", "skipped", "failed"
      showExceptions true
      showStackTraces true
      exceptionFormat 'full'
    }
  }

  plugins.withType(JavaPlugin) {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    plugins.apply('idea')
    plugins.apply('eclipse')
    plugins.apply('checkstyle')
    plugins.apply('com.github.spotbugs')

    idea {
      module {
        outputDir = file("$buildDir/classes/main")
        testOutputDir = file("$buildDir/classes/test")
        generatedSourceDirs += file("$buildDir/generated/jooq")
        sourceDirs += file("$buildDir/generated/jooq")
      }
    }

    checkstyle {
      ignoreFailures = false
      configDir = file("$rootDir/backend/config/checkstyle/")
      configFile = file("$rootDir/backend/config/checkstyle/checkstyle.xml")
      toolVersion = '8.5'
    }

    tasks.withType(com.github.spotbugs.SpotBugsTask) {
      excludeFilter = file("$rootDir/backend/config/spotbugs/excludeFilter.xml")
      reports {
        xml.enabled false
        html.enabled true
      }
    }
  }
}

task checkstyle {
  dependsOn subprojects.collect {it.tasks.withType(Checkstyle)}
}

task spotbugs {
  dependsOn subprojects.collect {it.tasks.withType(com.github.spotbugs.SpotBugsTask)}
}
